RESTのテストを追加

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -13,4 +13,7 @@ logging.level.com.example.web.persistence.mapper=debug
 # Disable browser's cache
 spring.web.resources.cache.cachecontrol.no-store=true
 
+# Jackson
+spring.jackson.time-zone=Asia/Tokyo
+
 logging.level.org.springframework.security=trace
