--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring
 spring.datasource.username=user
 spring.datasource.password=password
-spring.datasource.initialization-mode=always
-spring.datasource.sql-script-encoding=utf-8
+spring.sql.init.mode=always
+spring.sql.init.encoding=utf-8
 
 # MyBatis
 mybatis.configuration.map-underscore-to-camel-case=true
