--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,31 @@
+# データベースのURL
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+# データベースのユーザ名
 spring.datasource.username=user
+# データベースのパスワード
 spring.datasource.password=password
+
+# 起動時にSQLを実行
 spring.sql.init.mode=always
+# SQLファイルの文字コード
 spring.sql.init.encoding=utf-8
 
-# MyBatis
+# フォームからの日付の入力をISO8601形式で日付クラスに変換
+spring.mvc.format.date=iso
+
+# MyBatisでスネークケースをキャメルケースに自動変換
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# Logging (Show MyBatis SQL log)
+# MyBatisのSQLログを出力
 logging.level.com.example.persistence.mapper=debug
 
-# Disable browser's cache
+# ブラウザのキャッシュを無効化
 spring.web.resources.cache.cachecontrol.no-store=true
 
-# Jackson
+# Jacksonの日付フォーマットをISO8601形式に設定
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
+# Jacksonの日付のタイムゾーンを日本時間に設定
 spring.jackson.time-zone=Asia/Tokyo
 
+# Spring Securityのログを詳細に出力
 logging.level.org.springframework.security=trace
