バリデーションエラーをProblemDetail形式で返すよう修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.sql.init.encoding=utf-8
 # フォームからの日付の入力をISO8601形式で日付クラスに変換
 spring.mvc.format.date=iso
 
+# Spring MVCのエラーJSONをProblem Details形式にする
+spring.mvc.problemdetails.enabled=true
+
 # MyBatisでスネークケースをキャメルケースに自動変換
 mybatis.configuration.map-underscore-to-camel-case=true
 
